alapok:szöveg linkek style

--- a/nevjegy.html
+++ b/nevjegy.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    névjegy
+    <h1>Anita Nagy</h1>
+    <p>packaging designer</p>
+    <p>Budapest, HU</p>
+    <p>Imádok a csomagolástervezés részleteivel babrálni. A Twitteremen legtöbbször dizájnról, fotózásról írok, az Instagramomat pedig elárasztják az imádnivaló #PrincessImre cicámról készült fotók.</p>
 </body>
 </html>
