--- a/nevjegy.html
+++ b/nevjegy.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="box">
+        <img class="avatar" src="images/an-kép.png">
         <h1>Anita Nagy</h1>
         <p>packaging designer</p>
         <p>Budapest, HU</p>
