--- a/nevjegy.html
+++ b/nevjegy.html
@@ -11,8 +11,8 @@
         <img class="avatar" src="images/an-kép.png">
         <h1>Anita Nagy</h1>
         <p>packaging designer</p>
-        <p>Budapest, HU</p>
-        <p>Imádok a csomagolástervezés részleteivel babrálni. A Twitteremen legtöbbször dizájnról, fotózásról írok, az Instagramomat pedig elárasztják az imádnivaló #PrincessImre cicámról készült fotók.</p>
+        <p><span class="varos">Budapest, HU</span></p>
+        <div class="tartalom">Imádok a csomagolástervezés részleteivel babrálni. A Twitteremen legtöbbször dizájnról, fotózásról írok, az Instagramomat pedig elárasztják az imádnivaló #PrincessImre cicámról készült fotók.</div>
     </div>
 </body>
 </html>
